# src/apis/stores/controllers.js
@@ -1,24 +1,37 @@
-const models = require("./models");
+const storesModel = require("./models");
 const errorLogger = require("../../helpers/error_logger");
 
 const readStores = async (req, res) => {
     try {
-        const readResponse = await models.read();
+        const readStoresResponse = await storesModel.read();
+        const response = { success: true, stores: readStoresResponse };
         res.header("Content-Type", "application/json");
-        res.send(JSON.stringify(readResponse, null, 4));
+        res.status(200).send(JSON.stringify(response, null, 4));
     } catch (err) {
-        errorLogger("DEBUG LOG ~ file: controllers.js ~ line 9 ~ getStores ~ err", err);
+        errorLogger("DEBUG LOG ~ file: controllers.js ~ getStores ~ err", err);
+        const response = { success: false, message: err.message };
+        res.header("Content-Type", "application/json");
+        res.status(500).send(JSON.stringify(response, null, 4));
     }
 };
 
 const readStoreById = async (req, res) => {
     try {
-        const storeId = req.params.store_id;
-        const readResponse = await models.readById(storeId);
-        res.header("Content-Type", "application/json");
-        res.send(JSON.stringify(readResponse, null, 4));
+        const readStoreResponse = await storesModel.readById(req.params.id);
+        if (readStoreResponse.length == 0) {
+            const response = { success: false, message: "No such store!" };
+            res.header("Content-Type", "application/json");
+            res.status(400).send(JSON.stringify(response, null, 4));
+        } else {
+            const response = { success: true, store: readStoreResponse[0] };
+            res.header("Content-Type", "application/json");
+            res.status(200).send(JSON.stringify(response, null, 4));
+        }
     } catch (err) {
         errorLogger("DEBUG LOG ~ file: controllers.js ~ readStoreById ~ err", err);
+        const response = { success: false, message: err.message };
+        res.header("Content-Type", "application/json");
+        res.status(500).send(JSON.stringify(response, null, 4));
     }
 };
 
